# skarmory

./: .dockerignore  .gitignore  Cargo.toml  README.md
.sqlx/: query-076279b517f8171b5755d8d0d128a388794b75c0de57aa3cac4fb54c2ecf01c9.json  query-0a437d59202a190153f61c67dc0b330ce62ca019377fac99aeb5068b5838fb56.json  query-48cc821670607aff51095006d10590a5733205e0c457f4a8ea9443c29749b763.json  query-8088cdc0676e744b5130a98d7abab4e48126bad487a40f11dd4dd99e718c4e98.json  query-810b6be1c984c89f2ee761dcd95329178acc64f1fad8113a5a3f1a8d73a61ef2.json  query-8c70857f00f1e448b40eaedcc75633c123b3dd0b3dd97290aabe0ddd510556c7.json  query-b76259b279a9f320c0843e259a2e712c84efda71a9567301d2f7c422c3aca6ac.json  query-d83477deb22c89e2bd2ca553869fbef6518f8eff85dafb65a16b94c0fa210555.json  query-f62c25a76688b3c7891af725c8f5da3e7b98c9080068ece7fbde21d3c37e9127.json  query-f86886d60703ee02a64e9db1ed5dec9a7c7e85a5d1c50fa545f4572739ba076f.json  query-fd7d0c0b4febf14b8783afec64510642964ffa554283d644af5f5227385fd522.json
config/: default.toml  table.sql
docker/: rust.Dockerfile
drv/: Cargo.toml
drv/src/: lib.rs
src/: base.rs  error.rs  main.rs  spide.rs  spider.rs  state.rs  web.rs
src/data/: config.rs  db.rs  error.rs  mod.rs  user.rs
src/handler/: auth.rs  mod.rs
src/handler/auth/: mod.rs  state.rs
src/handler/user/: cup.rs  mod.rs
