[package]
name = "skarmory"
version = "0.1.0"
edition = "2021"

[dependencies]
scraper = "0.21.0"
reqwest = "0.12.9"

[dependencies.futures]
version = "0.3.31"
default-features = false

[dependencies.tokio]
version = "1.4.11"
features = ["rt-multi-thread", "time", "net"]
default-features = false

[dependencies.axum]
version = "0.7.8"
features = ["json", "http1", "tokio"]
default-features = false