[package]
name = "skarmory"
version = "0.1.0"
edition = "2024"

[dependencies]

[dependencies.uuid]
version = "1.16.0"
features = ["v4"]

[dependencies.serde]
version = "1.0.219"
features = ["derive"]

[dependencies.config]
version = "0.15.11"
default-features = false
features = ["toml"]

[dependencies.futures]
version = "0.3.31"
default-features = false

[dependencies.sqlx]
version = "0.8.5"
features = ["postgres", "runtime-tokio", "uuid"]

[dependencies.ntex]
version = "2.12.4"
features = ["tokio"]
default-features = false